WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224795
Zooming browser does not properly scale SVG clip paths
https://bugs.webkit.org/show_bug.cgi?id=224795
Summary
Zooming browser does not properly scale SVG clip paths
luka
Reported
2021-04-19 18:53:41 PDT
Created
attachment 426506
[details]
An file containing an example of the problem When zooming the browser (via CMD Plus, CMD Minus or via the menu bar), an element with an SVG clip path property set does not scale properly on Safari. I've attached a file clip-path-bug.html showing an example reproduction. Notice that when zooming in/out, the red element which has an SVG clip path property remains the same size, but other elements scale as expected. This behaviour is not reproducible on Chrome/Firefox, they both scale the red element as expected with the zoom level.
Attachments
An file containing an example of the problem
(1.16 KB, text/html)
2021-04-19 18:53 PDT
,
luka
no flags
Details
Test case
(549 bytes, text/html)
2021-08-28 11:35 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(15.36 KB, patch)
2021-08-28 13:22 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-04-20 09:47:54 PDT
I can reproduce.
Radar WebKit Bug Importer
Comment 2
2021-04-26 18:54:13 PDT
<
rdar://problem/77187161
>
Simon Fraser (smfr)
Comment 3
2021-08-28 11:27:26 PDT
This testcase works correctly now, but there's still a bug when the clip-path references an SVG element.
Simon Fraser (smfr)
Comment 4
2021-08-28 11:35:22 PDT
Created
attachment 436721
[details]
Test case
Simon Fraser (smfr)
Comment 5
2021-08-28 13:22:07 PDT
Created
attachment 436723
[details]
Patch
EWS
Comment 6
2021-08-28 18:32:02 PDT
Committed
r281736
(
241078@main
): <
https://commits.webkit.org/241078@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436723
[details]
.
Brent Fulgham
Comment 7
2022-02-04 12:28:07 PST
This change should be present in STP 139, iOS 15.4 Beta, and macOS 12.3 Beta.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug