Zooming browser does not properly scale SVG clip paths https://bugs.webkit.org/show_bug.cgi?id=224795

Reviewed by Tim Horton.

Source/WebCore:

Clip-path and Command+ zooming were fixed in r268138, but that change didn't address
reference clip paths.

Fix by having effectiveZoom scale the clip in the two codepaths; the "clip via a path"
path, and the "clip by painting a mask" path that we fall into for more complex clips.

We only need to fix the userSpaceOnUse code path, since with objectBoundingBox clips
the input bounds has already been scaled.

Tests use the non-standard "zoom" property, so can't be WPT tests.

Tests: css3/masking/clip-path-reference-painted-mask-zoom.html
       css3/masking/clip-path-reference-zoom-objectBoundingBox.html
       css3/masking/clip-path-reference-zoom.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setupClipPath):
* rendering/svg/RenderSVGResourceClipper.cpp:
(WebCore::RenderSVGResourceClipper::applyResource):
(WebCore::RenderSVGResourceClipper::pathOnlyClipping):
(WebCore::RenderSVGResourceClipper::applyClippingToContext):
(WebCore::RenderSVGResourceClipper::drawContentIntoMaskImage):
* rendering/svg/RenderSVGResourceClipper.h:

LayoutTests:

Tests for various clipping configurations which use the 'zoom' property which
has the same impact as Command+ zooming.

* css3/masking/clip-path-reference-painted-mask-zoom-expected.html: Added.
* css3/masking/clip-path-reference-painted-mask-zoom.html: Added.
* css3/masking/clip-path-reference-zoom-expected.html: Added.
* css3/masking/clip-path-reference-zoom-objectBoundingBox-expected.html: Added.
* css3/masking/clip-path-reference-zoom-objectBoundingBox.html: Added.
* css3/masking/clip-path-reference-zoom.html: Added.


Canonical link: https://commits.webkit.org/241078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281736 268f45cc-cd09-0410-ab3c-d52691b4dbfc